# chip8-emulator

./: .gitignore  CMakeLists.txt  README.md  about.txt  decode.c  decode.h  display.c  display.h  helpers.c  helpers.h  main.c  main.cpp  player.pro  registers.h  specifications.h  system.c  system.h  vm.c  vm.h  window.c  window.cpp  window.h
tests/: CMakeLists.txt  decode_tests  decode_tests.cpp
